--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 podcast:
   title: Die Marcologie
-  description: Ein Podcast der sich aus dem Namen Marc und Anthologie zusammensetzt und verschiedene Episoden mit verschiedenen Themen beinhaltet
+  description: Ein Podcast der sich aus dem Namen Marc und Anthologie zusammensetzt und in jeder Episode eine eigene Geschichte erzählt oder ein eigenes Thema umfasst
   url: /podcast.xml
   author: Marc Retz
   email: marc@mrcsrv.de
