--- a/_config.yaml
+++ b/_config.yaml
@@ -4,7 +4,7 @@ podcast:
   url: /podcast.xml
   author: Marc Retz
   email: marc@mrcsrv.de
-  logo: images/cover.png
+  logo: images/cover.jpg
   language: de
   category: Comedy
   subcategory: Stand-Up
