--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@ podcast:
   title: Die Marcologie
   description: Ein Podcast der sich aus dem Namen Marc und Anthologie zusammensetzt und in jeder Episode eine eigene Geschichte erzählt oder ein eigenes Thema umfasst
   url: /podcast.xml
-  author: Marc Retz
+  author: TheLegendaryMarc
   email: marc@mrcsrv.de
   logo: images/cover.jpg
   language: de
